--- a/EjerciciosHtmlCss/estilos.css
+++ b/EjerciciosHtmlCss/estilos.css
@@ -1,8 +1,11 @@
 
-
+body {
+    width:100%;
+}
 
 /*estilos header*/
 .header__nav {
+    width: 100%;
     background-color: #507C99;
     margin-top: 2vw;
     margin-bottom: 2vw;
@@ -457,4 +460,53 @@
 
 .whatsapp__img:hover  {
     transform:  scale(1.2);
+}
+
+
+/*Responsive*/
+@media screen and (max-width: 1280px){
+
+}
+
+@media screen and (max-width: 970px){
+    /*Header*/
+    .header__nav {
+        height: 7rem;
+    }
+
+    .header__nav__img {
+        width: 5rem;
+    }
+
+    .header__nav__nombre-veterinaria {
+        font-size: 3rem;
+    }
+
+    .header__nav__nombre-veterinaria-complemento {
+        font-size: 3rem;
+    }
+}
+
+@media screen and (max-width: 767px){
+
+}
+@media screen and (max-width: 600px){
+    .header__nav {
+        height: 4.8rem;
+    }
+
+    .header__nav__img {
+        width: 3rem;
+    }
+
+    .header__nav__nombre-veterinaria {
+        font-size: 2rem;
+    }
+
+    .header__nav__nombre-veterinaria-complemento {
+        font-size: 2rem;
+    }
+}
+@media screen and (max-width: 400px){
+
 }
