--- a/EjerciciosHtmlCss/estilos.css
+++ b/EjerciciosHtmlCss/estilos.css
@@ -421,9 +421,9 @@ body {
 
 
 /*Responsive*/
-@media screen and (max-width: 1280px){
+/* @media screen and (max-width: 1280px){
 
-}
+} */
 
 @media screen and (max-width: 970px){
     /*Header*/
