Responsive parcial de letrero nuestros servicios

--- a/EjerciciosHtmlCss/estilos.css
+++ b/EjerciciosHtmlCss/estilos.css
@@ -477,6 +477,11 @@
         width: 2.1rem;
         padding-right: 2vw;
     }
+
+    /*Nuestros servicios*/
+    .main__div__nuestros-servicios {
+        font-size: 1.5rem;
+    }
 }
 
 
