--- a/EjerciciosHtmlCss/public/estilos.css
+++ b/EjerciciosHtmlCss/public/estilos.css
@@ -402,6 +402,7 @@
     left: 48vw;
     border-radius: 30px;
     width: 40vw;
+    height: 35vw;
 }
 
 /*Contacto whatsapp*/
@@ -420,9 +421,20 @@
 /*Responsive*/
 
 
-/* @media screen and (max-width: 1280px){
+@media screen and (max-width: 1280px){
+    /*Mapa*/
+    .ubicacion__div {
+        height: 45rem;
+    }
 
-} */
+    .ubicacion__h2 {
+        font-size: 1.5rem;
+    }
+
+    .ubicacion__p {
+        font-size: 1rem;
+    }
+}
 
 @media screen and (max-width: 970px){
     /*Header*/
@@ -486,6 +498,31 @@
     /*Grid de imagenes*/
     .titulo-galeria__h2 {
         font-size: 1.5rem;
+    }
+
+    /*Mapa*/
+    .ubicacion__div{
+        height: 80rem;
+    }
+
+    .ubicacion__div2 {
+        width: 100%;
+    }
+
+    .ubicacion__img {
+        width: 90%;
+    }
+
+    .ubicacion__iframe {
+        top: 50rem;
+        left: 2.7rem;
+        width: 90%;
+        height: 25%;
+    }
+
+    .whatsapp__img {
+        top: 30rem;
+        width: 4rem;
     }
 }
 
@@ -655,6 +692,22 @@
     .grid-imagenes__img--derecho:hover {
         transform: scale(1.1) translateX(0px);
     }
+
+    /*Mapa*/
+
+    .ubicacion__div {
+        height: 50rem;
+    }
+
+    .ubicacion__img {
+        top: 10rem;
+    }
+
+    .ubicacion__iframe {
+        top: 30rem;
+        left: 1.6rem;
+
+    }
 }
 
 
@@ -763,6 +816,19 @@
     /*Grid de imagenes*/
     .titulo-galeria__h2 {
         font-size: 1rem;
+    }
+
+    /*Mapa*/
+
+    .ubicacion__iframe {
+        top: 25rem;
+        left:1rem;
+        height: 15rem;
+    }
+
+    /*whatsapp*/
+    .whatsapp__img {
+        top: 40rem;
     }
 
 
